# wde-test-automation

./: .gitignore  README.md  ROADMAP.md  conftest.py  cucumber-messages.ndjson  cypress.config.js  generate-cucumber-report.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: cypress-tests.yml  playwright-tests.yml
cypress/fixtures/: admin_credentials.json  users.json
cypress/integration/admin/features/: authentication.feature  authorization.feature  manage_orders.feature  manage_product.feature
cypress/support/pages/: cartPage.js  loginPage.js  ordersPage.js  productsPage.js
cypress/support/pages/admin/: loginPage.js  ordersPage.js  productsPage.js
cypress/support/step_definitions/: adminLoginSteps.js  commonSteps.js  manageOrdersSteps.js  manageProductSteps.js  purchaseFlowSteps.js  securitySteps.js
cypress/utils/: helpers.js
docs/bugs/: BUG-AUTH-001.md  BUG-AUTH-002.md  BUG-INFO-001.md  BUG-SEC-002.md  BUG-SEC-003.md  BUG-SEC-004.md  BUG-SEC-005.md
features/admin/: authorization.feature  login.feature  manage_product.feature
features/client/: purchase_flow.feature
features/security/: hardening.feature
pages/: cart_page.py  login_page.py  orders_page.py  products_page.py
scripts/: warm-up.sh
steps/: conftest.py  test_admin_login_steps.py  test_manage_orders_steps.py  test_manage_product_steps.py  test_purchase_flow_steps.py  test_security_hardening_steps.py  test_security_steps.py
test_data/: orders.json  users.json
utils/: helpers.py
